# gamework

./: CMakeLists.txt  LICENSE  README.md
include/: gamework.h  gamework_core.h  gamework_ecs.h
src/: main.cpp  util.h
src/core/: metadata.cpp  metadata.h  util.h  vec.h
src/ecs/: archetype.cpp  archetype.h  archetype_manager.cpp  archetype_manager.h  component_buffer.cpp  component_buffer.h  component_manager.cpp  component_manager.h  ecs.h  entity_manager.cpp  entity_manager.h  id.h  id_manager.cpp  id_manager.h  type.cpp  type.h  world.cpp  world.h
src/gfx/: graphics_device.cpp  graphics_device.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  window.cpp  window.h  window_mode.h
src/test/: main.cpp
